auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "77308996",
+   "id": "969d5fc3",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83cbfacf",
+   "id": "2481a051",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9befdc",
+   "id": "7435fad3",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7dc84ba",
+   "id": "d081f882",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,25 +48,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a264fe5",
+   "id": "790d82bf",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
     "\n",
+    "- [Job Search](https://jax.quantecon.org/job_search.html)\n",
     "- [Optimal Savings I: Value Function Iteration](https://jax.quantecon.org/opt_savings_1.html)\n",
     "- [Optimal Savings II: Alternative Algorithms](https://jax.quantecon.org/opt_savings_2.html)\n",
     "- [Shortest Paths](https://jax.quantecon.org/short_path.html)\n",
     "- [Optimal Investment](https://jax.quantecon.org/opt_invest.html)\n",
     "- [Inventory Management Model](https://jax.quantecon.org/inventory_ssd.html)\n",
     "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)\n",
-    "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
-    "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)\n",
     "- [Cake Eating: Numerical Methods](https://jax.quantecon.org/cake_eating_numerical.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5904b168",
+   "id": "dadd6bbd",
+   "metadata": {},
+   "source": [
+    "# Macroeconomic Models\n",
+    "\n",
+    "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
+    "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)\n",
+    "- [The Hopenhayn Entry-Exit Model](https://jax.quantecon.org/hopenhayn.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15e7519f",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80db0fd9",
+   "id": "35c46126",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -88,7 +99,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.1638618,
+  "date": 1712255420.7525036,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
