--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a60b4f9f",
+   "id": "752bc0c2",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8732295",
+   "id": "9897657c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f625479",
+   "id": "0290cdcb",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc26ba0d",
+   "id": "d6c2b354",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -125,13 +125,13 @@
     "        r(x, a)\n",
     "        + \\beta\n",
     "        \\sum_{d \\geq 0} v(f(x, a, d)) \\phi(d)\n",
-    "    \\right\\} \\tag{13.1}\n",
+    "    \\right\\} \\tag{14.1}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "067fce94",
+   "id": "d3b8afda",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -141,7 +141,7 @@
     "This time variation accommodates non-constant interest rates.\n",
     "\n",
     "To this end, we replace the constant $ \\beta $ in\n",
-    "[(13.1)](#equation-inventory-ssd-v1) with a stochastic process $ (\\beta_t) $ where\n",
+    "[(14.1)](#equation-inventory-ssd-v1) with a stochastic process $ (\\beta_t) $ where\n",
     "\n",
     "- $ \\beta_t = 1/(1+r_t) $ and  \n",
     "- $ r_t $ is the interest rate at time $ t $  \n",
@@ -165,7 +165,7 @@
     "    =\n",
     "        r(y, a)\n",
     "        + \\beta(z)\n",
-    "        \\sum_{d, \\, z'} v(f(y, a, d), z') \\phi(d) Q(z, z'). \\tag{13.2}\n",
+    "        \\sum_{d, \\, z'} v(f(y, a, d), z') \\phi(d) Q(z, z'). \\tag{14.2}\n",
     "$$\n",
     "\n",
     "We set\n",
@@ -178,7 +178,7 @@
     "Now $ R(y, a, y') $ is the probability of realizing next period inventory level\n",
     "$ y' $ when the current level is $ y $ and the action is $ a $.\n",
     "\n",
-    "Hence we can rewrite [(13.2)](#equation-inventory-ssd-b1) as\n",
+    "Hence we can rewrite [(14.2)](#equation-inventory-ssd-b1) as\n",
     "\n",
     "$$\n",
     "B((y, z), a, v)\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08561b79",
+   "id": "55599f5e",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941a4cb8",
+   "id": "0584a889",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc47226",
+   "id": "e4a9954a",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9d4ffc",
+   "id": "8af56d56",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec53f102",
+   "id": "e969b097",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaccf9b3",
+   "id": "f0cf0573",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "992e9ca0",
+   "id": "b83f317b",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ad2a05",
+   "id": "a7e815c8",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60000db0",
+   "id": "a34ceda8",
    "metadata": {
     "hide-output": false
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f3c7c9",
+   "id": "6c549f8d",
    "metadata": {
     "hide-output": false
    },
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b46c8a3",
+   "id": "05ab0a19",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8686543",
+   "id": "7a49798e",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beba832f",
+   "id": "f178af93",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63392105",
+   "id": "f6fbd360",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6a8d83",
+   "id": "db2c7cc3",
    "metadata": {
     "hide-output": false
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f80140",
+   "id": "d9dabf4a",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b121398e",
+   "id": "7570ac63",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fbfb0c",
+   "id": "b68ec9f7",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868ebe2f",
+   "id": "7357b11b",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87520458",
+   "id": "b342933a",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf19e9c",
+   "id": "0802dfd1",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad68869e",
+   "id": "43b3af99",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8655d34d",
+   "id": "565c476c",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71661d70",
+   "id": "0824ef02",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2289cc9b",
+   "id": "dab34f13",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60768c9e",
+   "id": "304b8760",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8841d7d8",
+   "id": "247487cb",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c58e0b3",
+   "id": "13770656",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0019e630",
+   "id": "1bb50748",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d3c199",
+   "id": "33c856f5",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f52036",
+   "id": "eb05b624",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfb43d14",
+   "id": "52208c7c",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a24f85",
+   "id": "a9609d24",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa080fb",
+   "id": "63d23983",
    "metadata": {
     "hide-output": false
    },
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34f6709",
+   "id": "fbce0e25",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98d8ada",
+   "id": "4d2b6bd0",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c206d5",
+   "id": "e78c6cfa",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0b2567",
+   "id": "6505d072",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adba49a0",
+   "id": "001ab369",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8aefc67",
+   "id": "46ae7acb",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.332966,
+  "date": 1712255420.8216307,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
