--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19593599",
+   "id": "1b814f13",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b335e998",
+   "id": "50ce77b0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "948849c1",
+   "id": "417619a7",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92ff4319",
+   "id": "171fb2d3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2a38e3d",
+   "id": "73527663",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55dad41",
+   "id": "b31c191e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8d94df",
+   "id": "43967b49",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb46e55",
+   "id": "881a3133",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78cbf11d",
+   "id": "0c516e31",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f3f53c",
+   "id": "9de3e879",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22189914",
+   "id": "04ce4df1",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc05326",
+   "id": "af07eae7",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab57e5b",
+   "id": "3b1378f1",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d326392",
+   "id": "ef811dd5",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee9a9a43",
+   "id": "130cbff9",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5518c0b3",
+   "id": "d0d2c2ce",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1adc11e0",
+   "id": "3fd5e008",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9096d1b9",
+   "id": "49e56871",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de546b4",
+   "id": "fc9c26d0",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fcabd6a",
+   "id": "7ba7b840",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d78bb914",
+   "id": "b5b900e4",
    "metadata": {
     "hide-output": false
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed47f5c",
+   "id": "aaf579ea",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b5b279",
+   "id": "bcb23cb7",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e547a506",
+   "id": "3bebb5fd",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "945a5a00",
+   "id": "b8690a91",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda1f807",
+   "id": "f3d029b8",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62d8609",
+   "id": "fe26825b",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d27d1e",
+   "id": "5a49b59d",
    "metadata": {},
    "source": [
     "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
@@ -523,7 +523,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.4446778,
+  "date": 1712255420.959114,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
