--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5444ace6",
+   "id": "52902737",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111891d3",
+   "id": "be45b4a7",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "922a83d3",
+   "id": "153d9e49",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5903cbeb",
+   "id": "ad239270",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eaae237",
+   "id": "4a117db2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496c70e7",
+   "id": "715b6a3e",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bee6f4",
+   "id": "d29599cb",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17eccff7",
+   "id": "5c935b35",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59330887",
+   "id": "10957308",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcab2b6",
+   "id": "68a55bf2",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c6fef61",
+   "id": "32204afd",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2728b8",
+   "id": "56dc8bf7",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d848900e",
+   "id": "e94e3c94",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e538ed3",
+   "id": "68af1c87",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be23a4d",
+   "id": "5c8df309",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a337c633",
+   "id": "e9929188",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954b27cf",
+   "id": "e93bbc9f",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60668c4",
+   "id": "4aab2931",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0025e80",
+   "id": "691ce60d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b4f267d",
+   "id": "ab894286",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee3e431",
+   "id": "0247ff1c",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eb7f82f",
+   "id": "a7f4595f",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b0809f",
+   "id": "5bd6a128",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5910b6",
+   "id": "faca44a7",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e3f44d",
+   "id": "86c16da0",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c61771f3",
+   "id": "b49db46a",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8a513c",
+   "id": "e07881b2",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75771711",
+   "id": "7bb6e420",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70aa4268",
+   "id": "edc85554",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b5d788c",
+   "id": "b1a20359",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a75595",
+   "id": "f15efa7d",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364a7314",
+   "id": "c3661250",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6ba11c",
+   "id": "3c75a7c3",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7a1c49",
+   "id": "b23bbdab",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "954ec521",
+   "id": "b9cb4117",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8cb19ec",
+   "id": "a2543e72",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f071e68",
+   "id": "6c399b5f",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a690e2",
+   "id": "4644c516",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977e0c78",
+   "id": "d3ac5110",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d3bb29",
+   "id": "0f32d19b",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0aeaedb",
+   "id": "b49cb787",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c3217f",
+   "id": "4244a763",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd4f7af",
+   "id": "16aa217b",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6d4e62",
+   "id": "77be6847",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca51752",
+   "id": "59d7bad3",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108008dc",
+   "id": "c5d6821f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8932fdc2",
+   "id": "5f9a5321",
    "metadata": {
     "hide-output": false
    },
@@ -999,7 +999,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.489061,
+  "date": 1712255421.1481497,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
