--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b9c30fc",
+   "id": "dd703024",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6989e4a0",
+   "id": "e2d4029f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509f497a",
+   "id": "2952d9eb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f45567",
+   "id": "e2a9a057",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e196a7",
+   "id": "6144efb1",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53174cc",
+   "id": "8adeb68b",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be04178d",
+   "id": "8f0864fc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f528ed",
+   "id": "7348f64d",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a326bd",
+   "id": "49caf5c7",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de30b040",
+   "id": "1f87bca0",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed8a64bc",
+   "id": "610413f8",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf768e6",
+   "id": "c584917c",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07f4973",
+   "id": "487af02b",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10caf6f0",
+   "id": "54389cf1",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde8101c",
+   "id": "289d9f97",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7b16ed",
+   "id": "07d9ea1b",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c703de",
+   "id": "b2960b75",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494b900e",
+   "id": "971b807f",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5493c7bb",
+   "id": "197336e1",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6e36767",
+   "id": "00b6c325",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5484f9b1",
+   "id": "c1bfe5de",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0bce02d",
+   "id": "104c8913",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59725f07",
+   "id": "cc2a7e99",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc815a68",
+   "id": "1e741488",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e666b7a",
+   "id": "535804f9",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f97d230",
+   "id": "eec90978",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4095cf06",
+   "id": "a2be2b7c",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12a04e4",
+   "id": "830b6ca6",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a45605b",
+   "id": "1faba2e7",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745a1c53",
+   "id": "aec84558",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe9c9e6",
+   "id": "20f6574e",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac298080",
+   "id": "6c1e019b",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75c6c78",
+   "id": "62c36ad7",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,10 +539,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eab2efa",
+   "id": "120fe855",
    "metadata": {},
    "source": [
-    "## Exercise 18.1\n",
+    "## Exercise 20.1\n",
     "\n",
     "We define a quadratic model for a single explanatory variable by\n",
     "\n",
@@ -555,10 +555,10 @@
     "\n",
     "<a id='equation-lambda-mle'></a>\n",
     "$$\n",
-    "\\lambda_t = \\exp(\\beta_0 + \\beta_1 x_t + \\beta_2 x_{t}^2) \\tag{18.1}\n",
+    "\\lambda_t = \\exp(\\beta_0 + \\beta_1 x_t + \\beta_2 x_{t}^2) \\tag{20.1}\n",
     "$$\n",
     "\n",
-    "Simulate the values of $ x_t $ by sampling from a normal distribution and $ \\lambda_t $ by using [(18.1)](#equation-lambda-mle) and the following constants:\n",
+    "Simulate the values of $ x_t $ by sampling from a normal distribution and $ \\lambda_t $ by using [(20.1)](#equation-lambda-mle) and the following constants:\n",
     "\n",
     "$$\n",
     "\\beta_0 = -2.5,\n",
@@ -584,10 +584,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794bcea3",
+   "id": "54d2ed89",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#newton_mle1)\n",
+    "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#newton_mle1)\n",
     "\n",
     "Let’s start by defining “true” parameter values."
    ]
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f2a327b",
+   "id": "c1d01970",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da00bc4",
+   "id": "bedd960d",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d481eb",
+   "id": "7727f44f",
    "metadata": {
     "hide-output": false
    },
@@ -631,16 +631,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab202664",
+   "id": "7fbd27c0",
    "metadata": {},
    "source": [
-    "We compute $ \\lambda $ using [(18.1)](#equation-lambda-mle)"
+    "We compute $ \\lambda $ using [(20.1)](#equation-lambda-mle)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c9e01a",
+   "id": "37f3e66d",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b923010",
+   "id": "614370a6",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1802d38e",
+   "id": "3fc725f1",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb044fa9",
+   "id": "63669f8a",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2f14ed",
+   "id": "a32b1377",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99bb819",
+   "id": "06e67d5d",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +709,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.593858,
+  "date": 1712255421.2602882,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
