--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eaeb09df",
+   "id": "65269b25",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608856b0",
+   "id": "e0ff2c30",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc991aa",
+   "id": "1a077296",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8abff8d",
+   "id": "0a02b844",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f23bd68",
+   "id": "4954a23b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d38332b",
+   "id": "f69277f4",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19da749b",
+   "id": "31deb312",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31770b29",
+   "id": "28418049",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3d9fac",
+   "id": "309a94fa",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "543e6f01",
+   "id": "f77b4421",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e8d9bd",
+   "id": "c9de013e",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe5bc76",
+   "id": "220a1082",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4057df74",
+   "id": "af4a0405",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd02352e",
+   "id": "827b0413",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a41406",
+   "id": "22ed2f0e",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646c9f61",
+   "id": "29de4b6f",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2223f0",
+   "id": "832a0969",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e120de13",
+   "id": "ba1289a8",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4812f0d",
+   "id": "b4e238aa",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0208a05",
+   "id": "f43dfdad",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c58fa1a",
+   "id": "e69a40d8",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8605f70",
+   "id": "c43b6013",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd1bcb8a",
+   "id": "c0bca86f",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e308687d",
+   "id": "09dc8c7f",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60be9c42",
+   "id": "8b7d0269",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4efe057b",
+   "id": "bc1d5603",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52259d7a",
+   "id": "5e647b05",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c80d93cb",
+   "id": "926ce535",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db7ce19",
+   "id": "8d1d4988",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6766e4",
+   "id": "072ea953",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294a46ba",
+   "id": "30651c2e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e46aa8ba",
+   "id": "e358412d",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e886aa6f",
+   "id": "99e64fac",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03963d75",
+   "id": "c548b186",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d37035",
+   "id": "952c0252",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa0ce93",
+   "id": "25e0d6f6",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a906bb2",
+   "id": "b96c503b",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39a2bbad",
+   "id": "08418b1f",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8af0e6e",
+   "id": "0ae49bc1",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eab3cc86",
+   "id": "c4df743b",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed7e757",
+   "id": "e95094d3",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e6af06",
+   "id": "2f89747f",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e056b045",
+   "id": "84aa6601",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55be9d03",
+   "id": "4e5ff7e6",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af0ddfdb",
+   "id": "3578b424",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3fd2ed8",
+   "id": "e409de35",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4716df9d",
+   "id": "a22834d1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828365c7",
+   "id": "1ef839bc",
    "metadata": {
     "hide-output": false
    },
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24e09d6",
+   "id": "50e2b128",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0a81f1",
+   "id": "139f9b52",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23bcdc8",
+   "id": "21eec165",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a637eae",
+   "id": "c0928f05",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e8cc8b",
+   "id": "fa910e23",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -840,7 +840,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.631652,
+  "date": 1712255421.2999358,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
