--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f663f866",
+   "id": "8c5390e0",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d60a83",
+   "id": "69fd99c5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ab73df",
+   "id": "963e943f",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196593ec",
+   "id": "7f616fb4",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88327f9f",
+   "id": "2d6d5efb",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5db895e",
+   "id": "7445b96b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5510e8",
+   "id": "ffba65eb",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa5c42a",
+   "id": "2e391b2d",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56032b0c",
+   "id": "bc500e0b",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26be96b9",
+   "id": "61e5e1a6",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eeec9aa",
+   "id": "3e4c6240",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5378833",
+   "id": "a3aba9a6",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2783f70e",
+   "id": "69d62da5",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdf11e74",
+   "id": "55c76651",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70573c9",
+   "id": "fe3fa53a",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dead3062",
+   "id": "307a0bf0",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78a01ac7",
+   "id": "e44193a5",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4277119b",
+   "id": "538ce129",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e90e0ef",
+   "id": "c03ee6c4",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94bcbb2b",
+   "id": "a4f6af82",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36fc58e",
+   "id": "72796088",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dff45341",
+   "id": "e96743dc",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a1ca7a",
+   "id": "aabf2429",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816f89fd",
+   "id": "89d9e3dc",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3061ce",
+   "id": "0830b577",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467f803f",
+   "id": "a78b9d6a",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fffc0d84",
+   "id": "74d7add7",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "823e350e",
+   "id": "e64c7d50",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ab1d2b2",
+   "id": "1cac0048",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b12e678",
+   "id": "51c2d60e",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4baff8c4",
+   "id": "0863206b",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efbf013",
+   "id": "905fc19d",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d780cf7",
+   "id": "0daebf70",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f10dba6",
+   "id": "02421778",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03bde3d8",
+   "id": "2d6f6ddb",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a242540",
+   "id": "ad94952e",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca17e5d",
+   "id": "0386251d",
    "metadata": {
     "hide-output": false
    },
@@ -674,67 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bae42f7e",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "model = create_investment_model()\n",
-    "print(\"Starting HPI.\")\n",
-    "qe.tic()\n",
-    "out = howard_policy_iteration(model)\n",
-    "elapsed = qe.toc()\n",
-    "print(out)\n",
-    "print(f\"HPI completed in {elapsed} seconds.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb4c173",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Starting VFI.\")\n",
-    "qe.tic()\n",
-    "out = value_function_iteration(model)\n",
-    "elapsed = qe.toc()\n",
-    "print(out)\n",
-    "print(f\"VFI completed in {elapsed} seconds.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9046dc19",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Starting OPI.\")\n",
-    "qe.tic()\n",
-    "out = optimistic_policy_iteration(model, m=100)\n",
-    "elapsed = qe.toc()\n",
-    "print(out)\n",
-    "print(f\"OPI completed in {elapsed} seconds.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dbea27a8",
-   "metadata": {},
-   "source": [
-    "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74ab0099",
+   "id": "9ac9063e",
    "metadata": {
     "hide-output": false
    },
@@ -750,34 +690,143 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c93fe0",
+   "id": "a6e6930b",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "σ_star = howard_policy_iteration(model)\n",
-    "\n",
+    "print(\"Starting HPI.\")\n",
+    "qe.tic()\n",
+    "σ_star_hpi = howard_policy_iteration(model)\n",
+    "elapsed = qe.toc()\n",
+    "print(σ_star_hpi)\n",
+    "print(f\"HPI completed in {elapsed} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6507d357",
+   "metadata": {},
+   "source": [
+    "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02de4f63",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(figsize=(9, 5))\n",
     "ax.plot(y_grid, y_grid, \"k--\", label=\"45\")\n",
-    "ax.plot(y_grid, y_grid[σ_star[:, 1]], label=\"$\\\\sigma^*(\\cdot, z_1)$\")\n",
-    "ax.plot(y_grid, y_grid[σ_star[:, -1]], label=\"$\\\\sigma^*(\\cdot, z_N)$\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_hpi[:, 1]], label=\"$\\\\sigma^{*}_{HPI}(\\cdot, z_1)$\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_hpi[:, -1]], label=\"$\\\\sigma^{*}_{HPI}(\\cdot, z_N)$\")\n",
+    "ax.legend(fontsize=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89279b56",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Starting VFI.\")\n",
+    "qe.tic()\n",
+    "σ_star_vfi = value_function_iteration(model)\n",
+    "elapsed = qe.toc()\n",
+    "print(σ_star_vfi)\n",
+    "print(f\"VFI completed in {elapsed} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3fb79e8",
+   "metadata": {},
+   "source": [
+    "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cbb40bb",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.plot(y_grid, y_grid, \"k--\", label=\"45\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_vfi[:, 1]], label=\"$\\\\sigma^{*}_{VFI}(\\cdot, z_1)$\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_vfi[:, -1]], label=\"$\\\\sigma^{*}_{VFI}(\\cdot, z_N)$\")\n",
+    "ax.legend(fontsize=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45ee8f3",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Starting OPI.\")\n",
+    "qe.tic()\n",
+    "σ_star_opi = optimistic_policy_iteration(model, m=100)\n",
+    "elapsed = qe.toc()\n",
+    "print(σ_star_opi)\n",
+    "print(f\"OPI completed in {elapsed} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff2e618f",
+   "metadata": {},
+   "source": [
+    "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3a41647",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.plot(y_grid, y_grid, \"k--\", label=\"45\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_opi[:, 1]], label=\"$\\\\sigma^{*}_{OPI}(\\cdot, z_1)$\")\n",
+    "ax.plot(y_grid, y_grid[σ_star_opi[:, -1]], label=\"$\\\\sigma^{*}_{OPI}(\\cdot, z_N)$\")\n",
     "ax.legend(fontsize=12)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e76e943e",
+   "id": "f3eacd44",
    "metadata": {},
    "source": [
+    "We observe that all the solvers produce the same output from the above three plots.\n",
+    "\n",
     "Let’s plot the time taken by each of the solvers and compare them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975b5978",
+   "id": "ce21031b",
    "metadata": {
     "hide-output": false
    },
@@ -789,13 +838,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005a47be",
+   "id": "953f963c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = create_investment_model()\n",
     "print(\"Running Howard policy iteration.\")\n",
     "qe.tic()\n",
     "σ_pi = howard_policy_iteration(model)\n",
@@ -805,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e2631f",
+   "id": "15905333",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955f1574",
+   "id": "cef0c48b",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b0d838",
+   "id": "473d372c",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +909,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.663827,
+  "date": 1712255421.336966,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
