--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49d66187",
+   "id": "1c05607e",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b39be88",
+   "id": "238a99a2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fc0a7a7",
+   "id": "86107598",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f8087d",
+   "id": "255b28d8",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906dfa38",
+   "id": "0ab8ac53",
    "metadata": {
     "hide-output": false
    },
@@ -91,14 +91,13 @@
     "import quantecon as qe\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from collections import namedtuple\n",
     "import matplotlib.pyplot as plt\n",
     "import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b93fc7b8",
+   "id": "8c052512",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -107,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b778d4",
+   "id": "6b0e5f2c",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b940043",
+   "id": "bb259daa",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -127,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c6bb89d",
+   "id": "a5eb4d6a",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa9a868d",
+   "id": "480b55f3",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -151,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7be5a62f",
+   "id": "dbd6ebd9",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1801160a",
+   "id": "8d8ddd45",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -190,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0158c9be",
+   "id": "d631aa52",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa461cb",
+   "id": "79e707ba",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "427fb264",
+   "id": "fbf58974",
    "metadata": {
     "hide-output": false
    },
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a1db64",
+   "id": "c3586ca8",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -246,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac36594",
+   "id": "29d1fd79",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12bc420",
+   "id": "6427fa7b",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -273,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3ec1856",
+   "id": "666e2efc",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9fb9d2",
+   "id": "666963dd",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -297,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092237c1",
+   "id": "56593640",
    "metadata": {
     "hide-output": false
    },
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5950dc30",
+   "id": "b0c315fb",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -326,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9601e217",
+   "id": "9ab783a1",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c610cdd",
+   "id": "8423a781",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -363,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d8e89bc",
+   "id": "2bed198e",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd15bf1c",
+   "id": "52854149",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -384,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1babbc0e",
+   "id": "6017066e",
    "metadata": {
     "hide-output": false
    },
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fedc6d",
+   "id": "f83cc158",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -409,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1d15773",
+   "id": "5245d270",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab81affb",
+   "id": "a79364f7",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -481,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0950fd2",
+   "id": "8c8eac7b",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dbaf6f",
+   "id": "a5b9ffaa",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -522,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9700af24",
+   "id": "da40cf72",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f9f11bd",
+   "id": "7b2a11de",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -559,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff7c8d3",
+   "id": "751bc45a",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db04bb01",
+   "id": "d0af585e",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -598,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c6ed40",
+   "id": "da007b69",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6096389f",
+   "id": "5c24ffb0",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -632,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4484d938",
+   "id": "b311d6f6",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955e1187",
+   "id": "b47e25a0",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -660,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a5d9d2b",
+   "id": "4ff23be1",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1501253",
+   "id": "9ff90d40",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -707,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60a4869",
+   "id": "21ec5f48",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cca875",
+   "id": "0f9d6a58",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -730,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ed6728c",
+   "id": "f04d5851",
    "metadata": {
     "hide-output": false
    },
@@ -755,18 +754,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eeda532",
+   "id": "373303aa",
    "metadata": {},
    "source": [
-    "## Plots\n",
+    "## Tests\n",
     "\n",
-    "Create a model for consumption, perform policy iteration, and plot the resulting optimal policy function."
+    "Let’s create a model for consumption, and plot the resulting optimal policy function using all the three algorithms and also check the time taken by each solver."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1bd29b",
+   "id": "67608190",
    "metadata": {
     "hide-output": false
    },
@@ -783,48 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6b6f97",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "σ_star = howard_policy_iteration(model)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(w_grid, w_grid, \"k--\", label=\"45\")\n",
-    "ax.plot(w_grid, w_grid[σ_star[:, 1]], label=\"$\\\\sigma^*(\\cdot, y_1)$\")\n",
-    "ax.plot(w_grid, w_grid[σ_star[:, -1]], label=\"$\\\\sigma^*(\\cdot, y_N)$\")\n",
-    "ax.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe0b0b07",
-   "metadata": {},
-   "source": [
-    "## Tests\n",
-    "\n",
-    "Here’s a quick test of the timing of each solver."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1e2d4bd",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "model = create_consumption_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bfeaba0",
+   "id": "ce2e434f",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +790,7 @@
    "source": [
     "print(\"Starting HPI.\")\n",
     "start_time = time.time()\n",
-    "out = howard_policy_iteration(model)\n",
+    "σ_star_hpi = howard_policy_iteration(model)\n",
     "elapsed = time.time() - start_time\n",
     "print(f\"HPI completed in {elapsed} seconds.\")"
    ]
@@ -840,7 +798,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed9145c",
+   "id": "af06fe36",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(w_grid, w_grid, \"k--\", label=\"45\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_hpi[:, 1]], label=\"$\\\\sigma^{*}_{HPI}(\\cdot, y_1)$\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_hpi[:, -1]], label=\"$\\\\sigma^{*}_{HPI}(\\cdot, y_N)$\")\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fda124e",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +823,7 @@
    "source": [
     "print(\"Starting VFI.\")\n",
     "start_time = time.time()\n",
-    "out = value_function_iteration(model)\n",
+    "σ_star_vfi = value_function_iteration(model)\n",
     "elapsed = time.time() - start_time\n",
     "print(f\"VFI completed in {elapsed} seconds.\")"
    ]
@@ -856,7 +831,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "986a1459",
+   "id": "b1622514",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(w_grid, w_grid, \"k--\", label=\"45\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_vfi[:, 1]], label=\"$\\\\sigma^{*}_{VFI}(\\cdot, y_1)$\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_vfi[:, -1]], label=\"$\\\\sigma^{*}_{VFI}(\\cdot, y_N)$\")\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a07b23",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +856,7 @@
    "source": [
     "print(\"Starting OPI.\")\n",
     "start_time = time.time()\n",
-    "out = optimistic_policy_iteration(model, m=100)\n",
+    "σ_star_opi = optimistic_policy_iteration(model, m=100)\n",
     "elapsed = time.time() - start_time\n",
     "print(f\"OPI completed in {elapsed} seconds.\")"
    ]
@@ -872,7 +864,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b801b4c1",
+   "id": "f0a60e4f",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(w_grid, w_grid, \"k--\", label=\"45\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_opi[:, 1]], label=\"$\\\\sigma^{*}_{OPI}(\\cdot, y_1)$\")\n",
+    "ax.plot(w_grid, w_grid[σ_star_opi[:, -1]], label=\"$\\\\sigma^{*}_{OPI}(\\cdot, y_N)$\")\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c450ee",
+   "metadata": {},
+   "source": [
+    "We observe that all the solvers produce the same output from the above three plots.\n",
+    "\n",
+    "Now, let’s create a plot to visualize the time differences among these algorithms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04ccc9aa",
    "metadata": {
     "hide-output": false
    },
@@ -890,13 +909,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cacb7684",
+   "id": "97968de0",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = create_consumption_model()\n",
     "σ_pi, pi_time = run_algorithm(howard_policy_iteration, model)\n",
     "σ_vfi, vfi_time = run_algorithm(value_function_iteration, model, tol=1e-5)\n",
     "\n",
@@ -911,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6feabea5",
+   "id": "b450517f",
    "metadata": {
     "hide-output": false
    },
@@ -934,7 +952,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.73863,
+  "date": 1712255421.4177194,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
