--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0b79000",
+   "id": "8b441253",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b3ffb3",
+   "id": "0b48f323",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5e12d3",
+   "id": "1507b114",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa09819b",
+   "id": "82cb5182",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ed4ca6",
+   "id": "6b4b1e7e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e7a6e3",
+   "id": "2d10dd9b",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ecb4a84",
+   "id": "9b4347b5",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6bcd195",
+   "id": "044b37f2",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -99,7 +99,7 @@
     "\n",
     "<a id='equation-spguess'></a>\n",
     "$$\n",
-    "J_0(v) = 0 \\text{ for all } v \\tag{11.1}\n",
+    "J_0(v) = 0 \\text{ for all } v \\tag{12.1}\n",
     "$$\n",
     "\n",
     "Now\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb36d2a1",
+   "id": "df9fe8a9",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72cfd2ff",
+   "id": "64c481c6",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c85e0a",
+   "id": "320d4e73",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53091036",
+   "id": "3df2f32d",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4443e6",
+   "id": "1565f015",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81ed3dd",
+   "id": "832d560d",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd12fef",
+   "id": "8a0f2489",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d78c7429",
+   "id": "c0d44b39",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581957c0",
+   "id": "5e99b9de",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c6675fd",
+   "id": "8ceecba1",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf27c57",
+   "id": "de24fdbb",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de5e64d",
+   "id": "896c91c5",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cfbd83f",
+   "id": "5aad73b3",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,10 +296,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20993c68",
+   "id": "23e70976",
    "metadata": {},
    "source": [
-    "## Exercise 11.1\n",
+    "## Exercise 12.1\n",
     "\n",
     "The text below describes a weighted directed graph.\n",
     "\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260c3648",
+   "id": "8b16bac5",
    "metadata": {
     "hide-output": false
    },
@@ -431,10 +431,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad97626",
+   "id": "f87a6aaf",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 11.1](https://jax.quantecon.org/#short_path_ex1)\n",
+    "## Solution to[ Exercise 12.1](https://jax.quantecon.org/#short_path_ex1)\n",
     "\n",
     "First let’s write a function that reads in the graph data above and builds a distance matrix."
    ]
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1870d0b2",
+   "id": "76e84bed",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e193eb",
+   "id": "cebedd89",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec7d450",
+   "id": "752f786a",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36391186",
+   "id": "a51f224c",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24400980",
+   "id": "54b5da6b",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de60d21e",
+   "id": "88885599",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd193b8b",
+   "id": "9e82d69e",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c527606a",
+   "id": "3d1c2024",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30f89539",
+   "id": "93dd9b64",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0fce09b",
+   "id": "c4e9b9f4",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "825e378c",
+   "id": "89380c74",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30eb27bd",
+   "id": "57bb6d88",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d81815a",
+   "id": "8bc8bded",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1710721917.874751,
+  "date": 1712255421.4467266,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
